--- a/workflows/human-WGS/nextflow.config
+++ b/workflows/human-WGS/nextflow.config
@@ -1,1 +1,14 @@
 process.executor = 'slurm'
+
+params.referencefolder = "/usr/share/sequencing/references/homo_sapiens/hg19/gatk_references/"
+params.outdir = "."
+params.fastqs = null
+params.bams = ""
+params.cpus = "32"
+params.dbsnp = "b37_dbsnp_138.b37.vcf"
+params.goldindels = "b37_Mills_and_1000G_gold_standard.indels.b37.vcf"
+params.genomefasta = "hg19_v0_Homo_sapiens_assembly19.fasta"
+params.normpanel = ""
+params.gnomad = "somatic-b37_af-only-gnomad.raw.sites.vcf"
+params.funcotator = "/home/AD/praposo/CSP/database/funcotator_dataSources.v1.6.20190124s/"
+params.realign = true
