added readme files

--- a/workflows/somatic/nextflow.config
+++ b/workflows/somatic/nextflow.config
@@ -1,1 +1,11 @@
 process.executor = 'slurm'
+
+REF = "/usr/share/sequencing/references/homo_sapiens/hg19/gatk_references/"
+
+params.fastqs = null
+params.bams = ""
+params.realign = false
+params.reference = "$REF/hg19_v0_Homo_sapiens_assembly19.fasta"
+params.germline_resource = "$REF/somatic-b37_af-only-gnomad.raw.sites.vcf"
+params.intervals = ""
+params.output_dir = ""
