added temporary folder option

--- a/workflows/GATK/cohort.config
+++ b/workflows/GATK/cohort.config
@@ -12,6 +12,7 @@ params.lcr_intervals = "$CSP/additional_files/LCR-hs37d5.prepared.bed"
 params.par_intervals = "$CSP/additional_files/GRCh37Pseudoautossomal_regions.bed"
 params.contig_ploidy = "$CSP/additional_files/hg19_contig_ploidy_priors.tsv"
 params.scale = "exome"
+params.tmp_dir = "$HOME/tmp"
 params.output_dir = "$CSP/BWH/CNV/cohort_padd2"
 
 container = "$HOME/CSP/additional_files/gatk_4.1.3.0/"
