--- a/workflows/GATK/case.config
+++ b/workflows/GATK/case.config
@@ -1,17 +1,17 @@
 process.executor = 'slurm'
 
-CSP = "$HOME/CSP"
-REF = "$CSP/additional_files/reference"
+MAIN = "$HOME/CSP/test/CNV/"
+REF = "$HOME/CSP/additional_files/hg19/"
 
 params.picard = "$HOME/software/picard/picard.jar"
-params.bams = "$CSP/BWH/REPORT/CNV/CNV_new_pipeline/BAM_chr1to22XY/sample"
+params.bams = "$MAIN/BAM_case/"
 params.realign = false
-params.reference = "$REF/hg19_v0_Homo_sapiens_assembly19.fasta"
-params.dictionary = "$REF/hg19_v0_Homo_sapiens_assembly19.dict"
-params.intervals = "$CSP/BWH/CNV/cohort_padd2/preprocessed.interval_list"
-params.cohort_ploidy_model = "$CSP/BWH/CNV/cohort_padd2/ploidy_cohort/cohort-model"
-params.cohort_cnv_caller_model = "$CSP/BWH/CNV/cohort_padd2/cnv_caller_cohort/cohort-model"
-params.output_dir = "$CSP/BWH/CNV/case_new_padd2"
+params.reference = "$REF/references/hg19_v0_Homo_sapiens_assembly19.fasta"
+params.dictionary = "$REF/references/hg19_v0_Homo_sapiens_assembly19.dict"
+params.intervals = "$MAIN/cohort/filtered_intervals.intervals"
+params.cohort_ploidy_model = "$MAIN/cohort/ploidy_cohort/cohort-model"
+params.cohort_cnv_caller_model = "$MAIN/cohort/cnv_caller_cohort/cohort-model"
+params.output_dir = "$MAIN/case"
 
 container = "$HOME/CSP/additional_files/gatk_4.1.3.0/"
 
