add temporary files and new container path

--- a/workflows/GATK/case.config
+++ b/workflows/GATK/case.config
@@ -11,9 +11,10 @@ params.dictionary = "$REF/references/hg19_v0_Homo_sapiens_assembly19.dict"
 params.intervals = "$MAIN/cohort/filtered_intervals.intervals"
 params.cohort_ploidy_model = "$MAIN/cohort/ploidy_cohort/cohort-model"
 params.cohort_cnv_caller_model = "$MAIN/cohort/cnv_caller_cohort/cohort-model"
+params.tmp_dir = null
 params.output_dir = "$MAIN/case"
 
-container = "$HOME/CSP/additional_files/gatk_4.1.3.0/"
+container = "/Data/Users/praposo/Data/gatk_4.1.3.0/"
 
 process {
     withName:CollectReadCounts {
