--- a/workflows/GATK/cohort.config
+++ b/workflows/GATK/cohort.config
@@ -15,7 +15,7 @@ params.scale = "exome"
 params.tmp_dir = "$HOME/tmp"
 params.output_dir = "$CSP/BWH/CNV/cohort_padd2"
 
-container = "$HOME/CSP/additional_files/gatk_4.1.3.0/"
+container = "/Data/Users/praposo/Data/gatk_4.1.3.0/"
 
 process {
     withName:PreprocessIntervals {
